--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,5 +26,10 @@
                     android:scheme="vburak" />
             </intent-filter>
         </activity>
+        <activity android:name=".AuthActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.AUTH"/>
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
