--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -29,6 +29,11 @@
         <activity android:name=".AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.AUTH"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".UserDetails">
+            <intent-filter>
+                <action android:name="android.intent.action.DETAILS"/>
             </intent-filter>
         </activity>
     </application>
