--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.vburak.githubclient.MainActivity">
+        <activity android:name="com.vburak.githubclient.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -26,12 +26,12 @@
                     android:scheme="vburak" />
             </intent-filter>
         </activity>
-        <activity android:name=".AuthActivity">
+        <activity android:name=".view.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.AUTH"/>
             </intent-filter>
         </activity>
-        <activity android:name=".UserDetails">
+        <activity android:name=".view.UserDetails">
             <intent-filter>
                 <action android:name="android.intent.action.DETAILS"/>
             </intent-filter>
